plugins {
    id "io.github.qishr.cascara-meta.java-library" version "0.1.0"
}


tasks.withType(JavaCompile).configureEach {
    options.release = 21
}


repositories {
	mavenLocal()
	mavenCentral()
}


dependencies {
    implementation(platform("io.github.qishr:cascara-meta-bom:$cascara_version"))
    implementation("org.junit.jupiter:junit-jupiter-api")
    implementation("org.junit.jupiter:junit-jupiter-engine")
    implementation('org.junit.platform:junit-platform-launcher')
    implementation('io.github.qishr:cascara-test-common-junit')
    implementation(project(':cascara-common'))
}


tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:-missing', '-quiet')
}


test {
    useJUnitPlatform()
    jvmArgs = [
        '--module-path', "$buildDir/modulepath",
        '--add-modules', 'ALL-MODULE-PATH'
    ]
}
